<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="7dp"
        android:background="#FFFFBB33"
        android:contentDescription="@string/app_name"
        android:scaleType="center" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#FFFFBB33"
        android:fontFamily="century-gothic"
        android:gravity="center"
        android:text="@string/login_admin"
        android:textAllCaps="true"
        android:textColor="#ff783a15"
        android:textSize="15dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etxtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="16dp"
        android:fontFamily="century-gothic"
        android:hint="@string/password_admin_login"
        android:inputType="textPassword"
        android:password="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="145dp"
            android:layout_height="60dp"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/ok" />

    </LinearLayout>


</LinearLayout>