<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="7dp"
        android:background="#FFFFBB33"
        android:contentDescription="@string/app_name"
        android:scaleType="center" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#FFFFBB33"
        android:gravity="center"
        android:singleLine="false"
        android:text="Postavljanje naziva opcije"
        android:textAllCaps="true"
        android:textColor="#ff783a15"
        android:textSize="15dp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/is_final_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:checked="false"
        android:hint="@string/final_text_will_show"
        android:text="@string/final_option" />

    <EditText
        android:id="@+id/option_final_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="16dp"
        android:hint="@string/final_text"
        android:inputType="text"
        android:visibility="gone" />

    <EditText
        android:id="@+id/option_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="16dp"
        android:hint="@string/option_name"
        android:inputType="text" />


</LinearLayout>