<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="7dp"
        android:background="#FFFFBB33"
        android:contentDescription="@string/app_name"
        android:scaleType="center" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#FFFFBB33"
        android:fontFamily="century-gothic"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/change_pass_dialog_title"
        android:textAllCaps="true"
        android:textColor="#ff783a15"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/old_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="16dp"
        android:fontFamily="century-gothic"
        android:gravity="center"
        android:hint="@string/old_pass"
        android:inputType="textPassword"
        android:password="true" />

    <EditText
        android:id="@+id/new_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="12dp"
        android:fontFamily="century-gothic"
        android:gravity="center"
        android:hint="@string/new_pass"
        android:inputType="textPassword"
        android:password="true" />

    <EditText
        android:id="@+id/pass_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="0dp"
        android:fontFamily="century-gothic"
        android:gravity="center"
        android:hint="ponovljen unos"
        android:inputType="textPassword"
        android:password="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/ok_btn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:text="@string/save" />
    </LinearLayout>
</LinearLayout>