<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="rs.etf.mv110185.komunikator_dipl.admin.NewOption">


    <TextView
        android:id="@+id/title_new_option"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="0dp"
        android:background="#ffffca36"
        android:gravity="center"
        android:text="Kreiranje nove opcije"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/new_option_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_new_option"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/new_option_name"
        android:inputType="textPersonName" />

    <CheckBox
        android:id="@+id/new_option_is_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/new_option_name"
        android:layout_alignStart="@+id/new_option_name"
        android:layout_below="@+id/new_option_name"
        android:layout_marginTop="10dp"
        android:checked="false"
        android:text="@string/final_option" />

    <EditText
        android:id="@+id/new_option_final_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/new_option_is_final"
        android:layout_alignStart="@+id/new_option_is_final"
        android:layout_below="@+id/new_option_is_final"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/new_option_final_text"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/new_option_ch_image"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/new_option_is_final"
        android:layout_alignRight="@+id/new_option_is_final"
        android:layout_below="@+id/new_option_final_text"
        android:layout_marginTop="20dp"
        android:text="@string/add_photo" />

    <Button
        android:id="@+id/new_option_ch_voice"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_option_final_text"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/new_option_ch_image"
        android:layout_toRightOf="@+id/new_option_ch_image"
        android:text="@string/add_sound" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/new_option_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/cancel"
            android:textColor="#ff961c11" />

        <Button
            android:id="@+id/new_option_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/save"
            android:textColor="#ff077816" />
    </LinearLayout>

</RelativeLayout>
