<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="rs.etf.mv110185.komunikator_dipl.admin.NewOption">


    <TextView
        android:id="@+id/title_voice_record"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="0dp"
        android:background="#ffffca36"
        android:gravity="center"
        android:text="Snimanje zvuka"
        android:textAppearance="?android:attr/textAppearanceLarge" />



    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/sound_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/cancel"
            android:textColor="#ff961c11" />

        <Button
            android:id="@+id/sound_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/save"
            android:textColor="#ff077816" />
    </LinearLayout>

    <Button
        android:id="@+id/record_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/play_btn"
        android:layout_alignLeft="@+id/play_btn"
        android:layout_alignRight="@+id/play_btn"
        android:layout_alignStart="@+id/play_btn"
        android:layout_below="@+id/title_voice_record"
        android:layout_marginTop="50dp"
        android:text="@string/record_audio" />

    <Button
        android:id="@+id/play_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/record_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/play_sound" />

</RelativeLayout>
