<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="7dp"
        android:background="#FFFFBB33"
        android:contentDescription="@string/app_name"
        android:scaleType="center" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#FFFFBB33"
        android:fontFamily="century-gothic"
        android:gravity="center"
        android:singleLine="false"
        android:text="Kreiranje lozinke za METAKOMUNIKATOR"
        android:textAllCaps="true"
        android:textColor="#ff783a15"
        android:textSize="15dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etxtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="16dp"
        android:fontFamily="century-gothic"
        android:gravity="center"
        android:hint="@string/new_pass"
        android:inputType="textPassword"
        android:password="true" />

    <EditText
        android:id="@+id/etxtPassword_conf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="16dp"
        android:fontFamily="century-gothic"
        android:gravity="center"
        android:hint="ponovljen unos"
        android:inputType="textPassword"
        android:password="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/ok_btn"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:text="@string/create" />
    </LinearLayout>
</LinearLayout>